<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    style="@style/activityBg"
    android:padding="24dp"
    android:id="@+id/addActivityLayout">

    <EditText
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="Title"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/card_bg_2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="76dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:gravity="top"
        android:hint="Note"
        android:inputType="text|textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/card_bg_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_input" />
</androidx.constraintlayout.widget.ConstraintLayout>